src/test/compile-fail/import-glob-path.rs
// error-pattern:cannot path into a glob
import foo::*::bar